added tools and agents

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,20 @@
-# Qwen3:8b - Nosana Endpoint
-# Note baseURL for Ollama needs to be appended with `/api`
-OLLAMA_API_URL=https://3yt39qx97wc9hqwwmylrphi4jsxrngjzxnjakkybnxbw.node.k8s.prd.nos.ci/api
-MODEL_NAME_AT_ENDPOINT=qwen3:8b
+# GitHub API access (recommended)
+GITHUB_TOKEN=
 
-# Qwen3:8b - Nosana Endpoint
-# Note baseURL for Ollama needs to be appended with `/api`
-# OLLAMA_API_URL=https://<nosana-url-id>.node.k8s.prd.nos.ci/api
-# MODEL_NAME_AT_ENDPOINT=qwen3:8b
+# LLM configuration (Nosana shared endpoint or local Ollama)
+# Note: Ollama base URL often ends with /api
+NOS_OLLAMA_API_URL=
+NOS_MODEL_NAME_AT_ENDPOINT=
+OLLAMA_API_URL=
+MODEL_NAME_AT_ENDPOINT=
 
-# Qwen3:8b - LocalHost - Local Development
-# https://ollama.com/download
-# Note baseURL for Ollama needs to be appended with `/api`
-# `ollama pull qwen3:0.6b`
-# `ollama serve`
-# OLLAMA_API_URL=http://127.0.0.1:11434/api
-# MODEL_NAME_AT_ENDPOINT=qwen3:0.6b
+# OpenAI (default LLM)
+OPENAI_API_KEY=
+OPENAI_MODEL_NAME=gpt-4o-mini
 
-# OpenAI - Uncomment and add apikey to use OpenAI
-# Uncomment the corresponding line in `src/mastra/agents/index.ts` to use OpenAI
-# OPENAI_API_KEY=
+# Nosana job posting (enable to run tests remotely)
+NOSANA_ENABLED=false
+NOSANA_MARKET=7AtiXMSH6R1jjBxrcYjehCkkSF7zvYWte63gwEDBcGHq
+
+# Logging
+LOG_LEVEL=info
